--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,6 +1,6 @@
-Port = 3000
-SecretKey = SecretKey 
+Port = #######
+SecretKey = ####### 
 
-ApiKey = 467943321459862
-ApiSecret = a9fCJlOAOZEzwEDswiRpr278mmw
-CloudName = difan2tba
+ApiKey = #######
+ApiSecret = #######
+CloudName = #######
